Style name and fix extra whitespace

--- a/src/app/resources/view-resources/resources-viewer.scss
+++ b/src/app/resources/view-resources/resources-viewer.scss
@@ -25,9 +25,8 @@ $full-height: calc(#{$view-container-height} - 2rem);
     }
 
     img {
-      height: calc(#{$dashboard-height});
-      width: calc(#{$dashboard-height} + 20rem);
-      align-self: center;
+      max-height: calc(#{$dashboard-height});
+      max-width: calc(#{$dashboard-height} + 20rem);
     }
 
   }
@@ -39,6 +38,6 @@ $full-height: calc(#{$view-container-height} - 2rem);
 
 }
 
-.shrink-image {
+.image-fit {
   object-fit: contain;
 }
